# fluxure

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  default.nix  deny.toml  flake.nix  index.html  justfile  shell.nix
.github/: DOCS.md
.github/actions/install_gh_cli/: action.yml
.github/workflows/: check.yml  scheduled.yml  test.yml
assets/: manifest.json  sw.js
src/: main.rs
