[package]
name = "fluxure"
version = "0.0.2"
authors = ["Thomas Topp <thomas.topp@topp.solutions>"]
edition = "2021"
description = "A flow-based programming framework"
readme = "README.md"
homepage = "https://topp.solutions/fluxure"
repository = "https://github.com/topp-solutions/fluxure"
license = "MIT OR Apache-2.0"
keywords = ["flow-based", "gui", "wasm"]
categories = ["science", "visualization"]

[dependencies]
egui = "0.29.1"
eframe = { version = "0.29.1", default-features = false, features = [
    # "accesskit",     # Make egui compatible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
log = "0.4.22"
serde = { version = "1.0.215", features = ["derive"] }

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11.5"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.49"
web-sys = "0.3.76"              # to access the DOM (to hide the loading text)

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
