[package]
name = "fluxure"
version = "0.0.2"
authors = ["Thomas Topp <thomas.topp@topp.solutions>"]
edition = "2021"
description = "A flow-based programming framework"
readme = "README.md"
homepage = "https://topp.solutions/fluxure"
repository = "https://github.com/topp-solutions/fluxure"
license = "MIT OR Apache-2.0"
keywords = ["flow-based", "gui", "wasm"]
categories = ["science", "visualization"]

[dependencies]
egui = "0.30.0"
eframe = { version = "0.30.0", default-features = false, features = [
    # "accesskit",     # Make egui compatible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
    "x11",           # To support older Linux
    "wayland",       # To support Linux (and CI)
] }
log = "0.4.25"
serde = { version = "1.0.217", features = ["derive"] }

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11.6"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.50"
web-sys = "0.3.77"              # to access the DOM (to hide the loading text)

# for -Zminimal-versions (track dependencies with `cargo tree -i <crate>`)
image = "0.25.1"
profiling = "1.0.16"

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
